--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,92 @@
-html {
-  background: #0025ff;
-  color: #fff;
+/* Style for Project 2: News site */
+
+* {
+	box-sizing: border-box;
 }
+
+html {
+  scroll-behavior: smooth;
+  background: #ffffff;
+  color: #000000,
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.7;
+	min-height: 100vh; 
+}
+
+.wrapper {
+padding: 2em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Alata', sans-serif;
+}
+
+a {
+	text-decoration: none;
+}
+
+.main-nav {
+	margin-top: 5px;
+
+}
+.logo a,
+.main-nav a {
+	padding: 10px 15px;
+	text-transform: uppercase;
+	text-align: center;
+	display: block;
+}
+
+.main-nav a {
+	color: #000000;
+  font-size: .79em;
+  font-weight: lighter;
+}
+
+.main-nav a:hover {
+  color: #c9c9c9;
+  transition: 0.3s;
+}
+
+.logo {
+  width: 70px;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fffcee;
+  width: 100%;
+  height: 300px;
+  text-align: center;
+}
+
+.main-nav, .navbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+
+
+@media (max-width: 500px) {
+	.navbar, .main-nav {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+    margin: 10px;
+  	}
+	}
+
+
