Added more cards and more information in the footer

--- a/code/style.css
+++ b/code/style.css
@@ -96,6 +96,10 @@
       color: white;
       font-family: monospace;
     }
+    footer a {
+      color: white;
+      text-decoration-line: underline;
+    }
   }
 
 /*** Media for tablet ***/
@@ -209,6 +213,10 @@
       color: white;
       font-family: monospace;
     }
+    footer a {
+      color: white;
+      text-decoration-line: underline;
+    }
   }
 
 /*** Media for desktop ***/
@@ -317,5 +325,9 @@
       text-align: center;
       color: white;
       font-family: monospace;
+    }
+    footer a {
+      color: white;
+      text-decoration-line: underline;
     }
   }
