Finished some responsivness changes

--- a/code/style.css
+++ b/code/style.css
@@ -43,13 +43,15 @@
       flex-direction: column;
       justify-content: flex-start;
       align-items: flex-start;
-      margin-bottom: 10px;
+      margin: 15px;
       border-bottom-style: solid;
       border-color: white;
     }
 
     .big-news img {
-      width: 340px;
+      width: 300px;
+      height: auto;
+      margin: 5px;
     }
 
     .big-news-text {
@@ -161,7 +163,8 @@
     }
     
     .big-news img {
-      height: 300px;
+      width: 280px;
+      height: auto;
       margin-bottom: 20px;
     }
     
@@ -273,8 +276,9 @@
     }
   
     .big-news img {
-      height: 300px;
-      margin: 20px;
+      width: 520px;
+      height: auto;
+      margin-bottom: 20px;
     }
     
     .big-news-text {
