--- a/code/style.css
+++ b/code/style.css
@@ -1,13 +1,231 @@
 body{
+  background-image: url("green.jpg");
+  background-color: orange;
+}
+
+/* HEADER BAR */
+
+header {
+  max-width: 1400px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-evenly;
+  background: lightgreen;
+}
+
+.nav a {
+  color: rgb(17, 15, 15);
+  text-decoration: solid;
+  margin-left: 16px;
+  justify-content: space-between;
+  text-decoration-line: none;
+  color: black;
+  
+  }
+/* .nav {
+  align-self: flex-end;
+  border: 1px;
+} */
+
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 24px;
+}
+
+.hamburger div {
+  width: 30px;  
+  height: 5px;
+  background-color: black;
+  border-radius: 5px;
+}
+  
+  /* nav {
+  border: 1px;
+  display: none; */
+  
+
+/* COLUMN-LAYOUT HEAD NEWS */
+
+.column-layout {
+  max-width: 1300px;
+  margin: 20px 10px 10px 20px;
+  /* margin: 40px auto 0px auto; */
+  line-height: 1.65;
+  background: coral;
+  padding: 20px;
+  border: 2px solid orangered;
+  border-radius: 5px;
+  padding: 5px;
+  box-shadow: 6px 6px 0 0 orange;
+}
+
+.main-column a {
+  text-decoration-line: none;
+  color: black;
+}
+
+.main-column {
+  flex: 1;
+  order: 1;
+}
+
+.side-column {
+margin: 5px;
+border-radius: 5px;
+padding: 5px;
+box-shadow: 6px 6px 0 0 orange;
+flex: 1;
+order: 2;
+}
+
+/* .right-column {
+  flex: 1;
+  order: 3;
+  /* height: 200px;
+  background: peachpuff; 
+} 
+
+.side-column img:hover  {
+  background: peachpuff;
+}
+
+/* CARDS INFO ARTICELS */
+
+.colum-cards {
+  max-width: 1400px;
+  margin: 40px auto 0 auto;
+
+  
+  /* display: flex;
+  
+  justify-content: space-between; */
+  
+  /* line-height: 1.65;
+  
+  background: coral;
+  
+  padding: 10px; */
+  
+  }
+  
+  .cards {
+  padding:20px;
+  margin-bottom: 20px;
+  flex-basis: 20%;
+  box-sizing: border-box;
+  border-radius: 3px;
+  box-shadow: 6px 6px 0 0 orange;
+  }
+
+  .cards a {
+      text-decoration-line: none;
+      color: black;
+  }
+
+.cards:nth-child(1){background-color: goldenrod;}
+.cards:nth-child(2){background-color: lightblue;}
+.cards:nth-child(3){background-color: rgb(175, 221, 161);}
+.cards:nth-child(4){background-color: rgb(146, 120, 218);}
+
+
+footer {
+  color: lightgreen;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* MEDIA QUERI */
+
+/* from Tablett size this is shown */
+
+/* 
+@media (max-width: 768px){
+  
+  .column-layout {
+      display: flex;
+  }
+
+  .colum-cards {
+   display: flex; 
+  justify-content: space-between;
+  }
+
+  nav {
+      display: none;
+  }
+} */
+
+@media (min-width: 678px){
+  
+  .column-layout {
+      display: flex;
+  }
+
+  .colum-cards {
+      display: flex; 
+      justify-content: space-between;
+  }
+
+  .hamburger div {
+      display: none;
+  }
+
+  .nav a {
+      display: inline-block;
+  }
+}
+
+/*** MEDIA QUERIES  ***/
+
+/*** Tablett ***/
+/* @media (min-width: 667px) {
+
+  header {
+    justify-content: space-between;
+  }
+
+nav {
+    display: inline-block;
+    }
+
+.hamburger {
+    display: none;
+    }
+
+.big-news-content {
+  display: inline-block;
+  }
+
+.news-card-content {
+   grid-template-columns: repeat(2, 1fr);
+} 
+
+}
+ 
+
+
+
+
+
+/* THE OLD CSS
+
+body{
   /* background: #d8dae4;
   color: rgb(15, 15, 7);
   font-family: Helvetica;
-  margin: 0px; */
-}
+  margin: 0px; 
+} */
+
 /*** HEADER ***/
 
 
-p {
+/* p {
   font: 15px helvetica; 
 }
 
@@ -18,9 +236,9 @@ h2 {
 
 h4 {
 font-family: courier;  
-font-size: 20px;
+font-size: 20px; */
 /* line-height: 30px; */
-}
+/* }
 
 .logo {
     width: 150px; 
@@ -59,11 +277,11 @@ nav a  {
   text-decoration: solid;
   margin-left: 16px;
   justify-content: space-between;
-}
+} */
 
 /*** THE BIG NEWS CONTENT ***/
 
-.big-news-content {
+/* .big-news-content {
   padding: 100px 16px;
   display: flex;
   flex-direction: column;
@@ -87,18 +305,18 @@ nav a  {
 button {
   display: block;
   text-size-adjust: none; 
-}
+} */
 
 /*** THE NEWS CARDS CONTENT ***/
 
-.news-card-content {
+/* .news-card-content {
   max-width: 1200px;
   margin: 0 auto;
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: repeat(1, 1fr);
   
-}
+} */
   /* display: flex;
   justify-content: center;
   align-items: center;
@@ -106,7 +324,7 @@ button {
   justify-content:space-around;
 }*/
 
-a {
+/* a {
   text-decoration: none;
   color: black;
 }
@@ -123,12 +341,12 @@ margin: 5px;
 border: 2px solid grey;
 border-radius: 5px;
 padding: 20px;
-box-shadow: 6px 6px 0 0 rgb(188, 192, 188);
+box-shadow: 6px 6px 0 0 rgb(188, 192, 188); */
 /* height: 100px; */
 /* width: 800px;
 height: 800px; *//* display: flex; */
 /* align-items: center; */
-}
+/* }
 
 footer {
   border: 2px solid black; 
@@ -136,14 +354,14 @@ footer {
   border-radius: 5px;
   text-align: center;
   
-}
+} */
 
 
 /*** MEDIA QUERIES  ***/
 
 
 /*** Tablett ***/
-@media (min-width: 667px) {
+/* @media (min-width: 667px) {
 
   body {
     background: snow;
@@ -169,28 +387,21 @@ nav {
 
 .news-card-content {
    grid-template-columns: repeat(2, 1fr);
-}
+} */
 
 /* .news-card-content a {
   color: blue;
 }
- */
+
 }
+ */
+ */
 
 /*** Desktop ***/
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
 
 .news-card-content {
   grid-template-columns: repeat(4, 1fr);
 }
   
-
-}
-
-
-
-
-
-
-
-
+} */
